--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -109,10 +109,10 @@ These changes are expected to have profound effects on forest biodiversity and e
 
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environments such as temperature, light, wind, humidity and Co2 which influences leaf temperature and metabolism along the gradient.[Bertrand et al. 2011]
 
-The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions.
-Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to increased sensitivity of overstory to variability in water and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. Evidence shows that larger trees suffer during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to occur [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continues evapotranspiration and consequential buffering of the understory [REF]  
+The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions[@senfCanopyMortalityHas2018a].
+Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to increased sensitivity of overstory to variability in water and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. Evidence shows that larger trees suffer hydraulic stress during drought [resulting in heat stressed canopy-leaves], which may contribute to increasing larger tree mortality in forests around the world should frequencies of drought continue to increase [@mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020]. However, in mesic forest conditions, availability of water enables canopies with suitable foliar traits to remain cool through continues evapotranspiration and consequential buffering of the understory [REF]  
 
-While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming [@bertrandCommentForestMicroclimate2020]. As a result, understories experience a different set of microclimatic pressures with rising temperature in combination with conditions of limited light and related foliar traits, inter-species resource competition etc.. [@bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and growth, even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. Tree-ring evidence shows reduced growth of understory trees relative to overstory with warming temperatures, in mesic temperate forests[@rollinsonClimateSensitivityUnderstory, 2020], along with other studies that show thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@duqueThermophilizationAdultJuvenile2015; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering continued frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [@niinemetsControversyTraitsConferring2006] which may have further impacts on understory species with rising temperatures. 
+While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming [@bertrandCommentForestMicroclimate2020]. As a result, understories experience a different set of microclimatic pressures with rising temperature in combination with conditions of limited light and related foliar traits, inter-species resource competition etc.. [@niinemetsResponsesForestTrees2010a; @bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and growth, even around 1 degree of warming can lead to changes in plant species composition and growth [@bertrandChangesPlantCommunity2011; @bertrandCommentForestMicroclimate2020]. Tree-ring evidence shows reduced growth of understory trees relative to overstory with warming temperatures, in mesic temperate forests[@rollinsonClimateSensitivityUnderstory, 2020], along with other studies that show thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@duqueThermophilizationAdultJuvenile2015; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering continued frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [@niinemetsControversyTraitsConferring2006] which may have further impacts on understory species with rising temperatures. 
 
 Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellPervasiveShiftsForest2020].
 Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
@@ -175,13 +175,13 @@ This difference in light regime along a vertical profile is an important driver 
 *(fill in some specifics from the NEON analysis)*
 Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [@barnardSeasonalVariationCanopy2016a; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019] in summer months.
 
-Wind speed in the upper canopy of a semi-deciduous tropical forest has been observed to be higher in dry season of than in upper canopy wet season [@rey-sanchez_spatial_2016].[*double check*] 
+Wind speed in the upper canopy of a semi-deciduous tropical forest has been observed to be higher in dry season than in upper canopy wet season [@rey-sanchez_spatial_2016] [*double check*]. 
 Greater upper canopy wind speeds result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with increase in wind velocity [@daudetWindSpeedLeaf1999a]. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$, this is more typical of small leaves in upper canopy that make them more advantageous in dissapating heat efficiently than larger leaves[@bauerleSeparatingFoliarPhysiology2011]. In low wind conditions, because $g_{a}$ to heat transfer is small enough, $T_{leaf}$ in upper canopy can become substantially elevated than $T_{air}$ under high radiation [@martin_boundary_1999]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]. 
 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019], and recent evidence shows of a similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a] and in the northwestern United States [@davis_microclimatic_2019]. Even though canopy cover buffers maximum air temperatures in the understory, inevitable increase in understory temperatures continue to be observed as a result of global increase in temperatures, however the buffering by canopy cover smoothens this warming in the understory [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020;@rollinsonClimateSensitivityUnderstory]
 
-Diurnal moderating capacity differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures than pine and boreal forests. Increase in crown density and leaf area index decreases light and higher maximum temperature permeability into forest understory, thus maintaining greater lower maximum daytime temperature. Comparitively open forests such as pine forests have sparse stands resulting in decreased buffering capacity in understory and closer air temperatures to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reveresed during the night, however, with pine forests maintaining warmer below canopy temperature than above[@vonarxSpatiotemporalEffectsForest2012a] 
+Diurnal moderating capacity differs between forests with varying canopy structure, crown density, and seasons. Tropical, temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures than pine and boreal forests. Increase in crown density and leaf area index decreases light and higher maximum temperature permeability into forest understory, thus maintaining greater lower maximum daytime temperature. Comparitively open forests such as pine forests have sparse stands resulting in decreased buffering capacity in understory and closer air temperatures to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reveresed during the night, however, with pine forests maintaining warmer below canopy temperature than above[@vonarxSpatiotemporalEffectsForest2012a] 
 
 Similarly, maximum air temperatures were higher above than below tropical forest canopies during wet seasons in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal Brazil [@fauset_differences_2018, Tymen et al. 2017].
 
@@ -204,7 +204,7 @@ Along with temperature, forest canopies moderate relative humidity in below-cano
 With rising temperatures, this trend in maximum $T_{air}$ and RH would have implications for understory seedling growth, especially in high altitude temperate pine forests and montane forests  [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018] (to clarify why? are these high elevation forests limited by low temperature and low rh?)  
 
 RH, in combination with temperature, determines vapor pressure deficit, $VPD$. Atlantic forests during wet season tended to have higher $T_{air}$, and $VPD$ in upper canopy and canopy gaps than lower in understory where $T_{air}$ and $VPD$ were lower [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017].  
-This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomtal contrains and lower osmotic potential. [@niinemetsPhotosyntheticAcclimationSimultaneous2004a]. In North Eastern US temperate forests, upper canopy was observed to be more sensitive to $VPD$, whereas as understory was insensitive [[@rollinsonClimateSensitivityUnderstory, 2020]
+This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomtal contrains and lower osmotic potential. [@niinemetsPhotosyntheticAcclimationSimultaneous2004a]. In North Eastern US temperate forests, upper canopy was observed to be more sensitive to $VPD$, whereas as understory was insensitive [@rollinsonClimateSensitivityUnderstory, 2020]
 
 **Finally, carbon dioxide (CO~2~) concentrations tend to be higher in the understory.** 
 -	Higher in understory, particularly at dusk (Koike et al. 2001).
@@ -244,19 +244,15 @@ However vertical climate gradients within forests are known to be steeper than t
 
 ## Trait variation 
 
-Leaf traits are shaped by intra canopy light and height, and show intra-canopy foliar plasticity in accordance with the intensity and availability of light. Degrees of high irradiance gives rise to sun-leaf morphology compared to degrees of low irradiance characterized by shade shapes shade-leaf morphology [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006] within- and across species [Ishii et al. 2018; @niinemetsWorldwideAnalysisWithincanopy2015]. The degree of intra-canopy plasticity also varies across species and geographically [@sackHowStrongIntracanopy2006; @ishiiVariationIntracrownLeaf2018].
+Leaf traits are shaped by intra-canopy light and height, and show intra-canopy foliar plasticity in accordance with the intensity and availability of light. Degrees of high irradiance gives rise to sun-leaf morphology compared to degrees of low irradiance that is characterized by shade shapes shade-leaf morphology [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006] within- and across species [Ishii et al. 2018; @niinemetsWorldwideAnalysisWithincanopy2015]. The degree of intra-canopy plasticity also varies across species and geographically [@sackHowStrongIntracanopy2006; @ishiiVariationIntracrownLeaf2018].
 
-Adaptions of traits to ranges of sun-exposure or shaded-ness vary within a forest strata among trees of different sizes.
 Cateogorization of sun and shade tolerance from @niinemetsControversyTraitsConferring2006 are as follows: "The five-level scale used for shade tolerance (1,very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%". Additionally, shade leaves in the understory are of three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect 'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered.[refs, -Martijn Slot]
 
-The variation and quanitity of light falling on leaves is perceived through a network of phytohormones that regulate leaf acclimation to light conditions and consequential strategies to regulate growth [Mathur et al. 2018]. Under conditions of low light, understory species may have conservative  growth strategies because they are resource (light) limited which leads to insuffiencient production of ATP for carbon fixation and carbohydrate synthesis.
+The variation and quanitity of light falling on leaves is perceived through a network of phytohormones that regulate leaf acclimation to light conditions and consequential strategies to regulate growth and traits. Under conditions of low light, understory species may have conservative  growth strategies because they are resource (light) limited which leads to insuffiencient production of ATP for carbon fixation and carbohydrate synthesis[Mathur et al. 2018].
 
-Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory.As a result the different combination of stressors experienced by taller trees with foliage exposed to greater PAR are different from the combination of stressors experienced by understory shorter trees with shaded/semi-shaded leaves [Niinemetes et al. 2010] 
+Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory.As a result the different combination of stressors taller trees with foliage exposed to greater PAR are different from the combination of stressors experienced by understory shorter trees with shaded/semi-shaded leaves [Niinemetes et al. 2010] 
 "Spending their lifecycle in the shade means they have different pressures [such as competition for light or adapting leaf traits to maximum light capture and use efficiency] than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well."[-Martijn]
-Additionally, increased exposure to light increases the carbon reserve, plant height, foliage robustness,  while also increasing evapotranspiration, decreasing hydraulic conductivity, increasing chances of photoinhibition in leaves should water availbility become limited. However, understory shaded/younger trees have comparitively less carbon reserve due to light limitation as a primary stressor, decreased plant biomass, increased leaf biomass, and drecreased evapotransition demands. Larger carbon reserves in trees with greater light and water availability allows them to tolerate greater number of stressors compared to understory/younger trees that are able to tolerate only a fewer stressors making them overall more sensitive to stress [such as temperature]. Thus, overall stress sensitivity decreases with increasing height, light and age.[@niinemetsResponsesForestTrees2010a]
-
-
-
+Additionally, increased exposure to light increases carbon reserve, plant height, foliage robustness,  while also increasing evapotranspiration, decreasing hydraulic conductivity, increasing chances of photoinhibition in leaves should water availbility become limited, however with available water overall sensitivity to stress decreases. However, understory shaded/younger trees have comparitively less carbon reserve due to light limitation as a primary stressor [which differs among shade-tolerant/intolerant], decreased plant biomass, increased leaf biomass, and decreased evapotransition demands, with greater overall sensitivitty to stress. Larger carbon reserves in trees with greater light and water availability allows them to tolerate greater number of stressors compared to understory/younger trees that are able to tolerate only a fewer stressors making them overall more sensitive to stress [such as temperature]. Thus, overall stress sensitivity decreases with increasing height, light and age.[@niinemetsResponsesForestTrees2010a]
 Their traits will be different from shade leaves of canopy trees as well. E.g.
 They tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Those differences in traits are likely to affect their thermal properties as well.
 
